--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -11,17 +11,19 @@ header {
 div {
     font-size: 25px;
     font-weight: bold;
-    background-color: rgba(176, 224, 230, 0.9);
+    background-color: rgba(176, 196, 222, 0.9);
     text-align: center; 
     margin-top: 0.02%;
     margin-bottom: 0.02%;
 }
 
 h2 {
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
     font-size: 20px;
-    background-color: #B3B6B7;
+    background-color: rgb(176, 196, 222);
+    line-height: 30px;
+    border-radius: 25px;
     text-align: center; 
 }
 
