--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -17,30 +17,63 @@ header {
     margin-bottom: 0.02%;
 }
 
-.div-Indice {
-    margin-left: 35%;
-    margin-right: 35%;
-    background-color: rgb(104, 184, 135);
-    line-height: 30px;
-    margin-top: 2%;
-    margin-bottom: 2%;
+.dropbtn {
+    background-color: pink;
+    color: black;
+    margin-top: 10px;
+    padding: 12px 50px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
     border-radius: 25px;
 }
 
+.Dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.DropContent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
 .a-Indice {
-    font-weight: bold;
-    color: white;
-    font-size: 20px;
+    color: black;
+    padding: 12px 50px;
+    text-decoration: none;
+    display: block;
+}
+
+.a-Indice:hover {
+    background-color: rgb(176, 196, 222);
+}
+
+.Dropdown:hover .DropContent {
+    display: block;
+}
+
+.Dropdown:hover .dropbtn {
+    background-color: rgb(176, 196, 222);
+}
+
+.a-Certificados {
+    color: black;
     text-align: center;
     text-decoration: none;
 }
 
-.section-SobreMi {
+.p-SobreMi {
     margin-left: 15%;
     margin-right: 15%;
 }
 
-.section-InteresesPersonales {
+.p-InteresesPersonales {
     margin-left: 15%;
     margin-right: 15%;
 }
@@ -55,13 +88,18 @@ h2 {
     text-align: center; 
 }
 
-h3 {
+h4 {
     font-size: 20px;
     color: rgb(77, 77, 182);
     text-align: center; 
 }
 
 main {
+    text-align: center;
+    line-height: 40px;
+}
+
+dd{
     text-align: center;
 }
 
